# c_compiler

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  TODO  meson.build
src/: ansi_colors.h  ansi_colors.hpp  ast.hpp  compiler.cpp  compiler.hpp  constant_fold.cpp  graph_gen.cpp  lexer.c  lexer.cpp  lexer.h  lexer.hpp  main.c  main.cpp  node.c  nodes.h  parser.c  parser.cpp  parser.h  parser.hpp  semantics.cpp  semantics.hpp  token.c  token.h
src/backend/: lc2k.cpp  lc2k.hpp
src/frontend/: constant_fold.cpp  graph_gen.cpp  graph_gen.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  semantics.cpp  semantics.hpp
src/middleend/: codegen.cpp  codegen.hpp
tests/: 1.c  2.c  associative.c  equality.c  fib.c  includes.c  includes.h  macros.c  main.c  right_shift.c
